--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,55 @@
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+    color: #333;
 }
 
-#myDiagram{
-    display: block;
-    width: 100%;
-    height: 100%;
+h1{
+    font-weight: 200;
+}
+
+a, a:link,
+a:hover, a:visited{
+    text-decoration: none;
+    color: #333;
+}
+a:hover{
+    color: #0275d8;
+}
+
+
+#main{
+    padding: 100px 0;
+}
+
+#main > .container > h1{
+    text-align: center;
+    font-weight: 200;
+    margin: 0;
+    padding-bottom: 100px;
+    font-size: 3.5em;
+}
+
+#main .box{
+    transition: border .5s;
+    -webkit-transition: border .5s;
+    -moz-transition: border .5s;
+    -ms-transition: border .5s;
+    padding: 50px 25px;
+    margin: 5px 0;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#main .box p{
+    margin: 0;
+}
+
+#main .box.sistemas-2015:hover {
+    border-color: #e45126;
+}
+
+#main a .box {
+    color: #333;
 }
