--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ a:hover{
     border: 1px solid transparent;
     border-radius: 5px;
     text-align: center;
+    height: 246px;
 }
 
 #main .box p{
